test_suite/tests/ui/borrow/duplicate_lifetime.stderr
error: duplicate borrowed lifetime `'a`
 --> $DIR/tests/ui/borrow/duplicate_lifetime.rs:5:22
  |
5 |     #[serde(borrow = "'a + 'a")]
  |                      ^^^^^^^^^
